k8s/manifests/temporis/influxdb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: influxdb2
  serviceName: influxdb2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: influxdb2
    spec:
      serviceAccountName: influxdb2
      containers:
      - name: influxdb2
        image: influxdb:2.7.4-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8086
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - name: data
          mountPath: /var/lib/influxdb2
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: influxdb2
