k8s/manifests/temporis/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb2
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8086
  selector:
    app.kubernetes.io/instance: influxdb2
    app.kubernetes.io/name: influxdb2
  type: ClusterIP
