k8s/manifests/temporis/influxdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb2-pomerium
  annotations:
    # RBAC: influxdb.admin or influxdb.viewer
    ingress.pomerium.io/policy: |
      - allow:
          or:
            - groups:
                has: "influxdb.admin"
            - groups:
                has: "influxdb.viewer"
    ingress.pomerium.io/pass_identity_headers: "true"
    ingress.pomerium.io/set_response_headers: |
      Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
      X-Frame-Options: SAMEORIGIN
      X-Content-Type-Options: nosniff
      X-XSS-Protection: 1; mode=block
      Referrer-Policy: same-origin
spec:
  ingressClassName: pomerium
  rules:
  - host: influxdb2.harvestasya.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb2-influxdb2
            port:
              number: 80
