k8s/manifests/temporis/influxdb/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb2

spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`influxdb2.harvestasya.org`)
    services:
    - name: influxdb2-influxdb2
      port: 80
    middlewares:
    - name: security-headers
      namespace: traefik

  tls:
    secretName: harvestasya-wildcard-tls
